[package]
name = "dtqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
toml = "0.9"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
