[package]
name = "dtqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
toml = "0.9"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4"] }
